@@ -23,7 +23,6 @@
 
 package com.iluwatar.collectionpipeline;
 
-import java.util.Arrays;
 import java.util.List;
 
 /**
@@ -38,7 +37,7 @@ public class CarFactory {
    * @return {@link List} of {@link Car}
    */
   public static List<Car> createCars() {
-    return Arrays.asList(new Car("Jeep", "Wrangler", 2011, Category.JEEP),
+    return List.of(new Car("Jeep", "Wrangler", 2011, Category.JEEP),
         new Car("Jeep", "Comanche", 1990, Category.JEEP),
         new Car("Dodge", "Avenger", 2010, Category.SEDAN),
         new Car("Buick", "Cascada", 2016, Category.CONVERTIBLE),
