@@ -32,7 +32,6 @@ import org.junit.jupiter.params.ParameterizedTest;
 import org.junit.jupiter.params.provider.MethodSource;
 import org.slf4j.LoggerFactory;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.LinkedList;
 import java.util.List;
@@ -50,7 +49,7 @@ import static org.mockito.Mockito.verify;
 public class PartyMemberTest {
 
   static Collection<Supplier<PartyMember>[]> dataProvider() {
-    return Arrays.asList(
+    return List.of(
             new Supplier[]{Hobbit::new},
             new Supplier[]{Hunter::new},
             new Supplier[]{Rogue::new},
