@@ -24,8 +24,8 @@
 package com.iluwatar.retry;
 
 import java.util.ArrayDeque;
-import java.util.Arrays;
 import java.util.Deque;
+import java.util.List;
 
 /**
  * Finds a customer, returning its ID from our records.
@@ -48,7 +48,7 @@ public final class FindCustomer implements BusinessOperation<String> {
    */
   public FindCustomer(String customerId, BusinessException... errors) {
     this.customerId = customerId;
-    this.errors = new ArrayDeque<>(Arrays.asList(errors));
+    this.errors = new ArrayDeque<>(List.of(errors));
   }
   
   @Override
